Fixed editing and preview icon visibility when steps have background.

--- a/styles/step-preview-list.css
+++ b/styles/step-preview-list.css
@@ -118,6 +118,8 @@
   padding: 0.3em;
   font-size: 0.7em;
   border-radius: 50%;
+  background: white;
+  z-index: 2;
 }
 
 .h5p-impress-step-preview-clone-wrapper.editing-step:after {
